# GPA-Caluclator-App

./: README.md
pyqt6-gpa_calculator/: README.md  pyproject.toml
pyqt6-gpa_calculator/pyqt6_gpa_calculator/: app.py
pyqt6_gpa_calculator/: app.py
